﻿- Add mod compatibility check for old Painter mod


Version 2.1.1

- Add mod options panel setting to toggle forced update of existing building stats on game load
- Add exception catcher for monuments panel setup (stop game hanging during load due to no valid monuments)


Version 2.1

- Add mod options panel setting for plain or skybox thumbnail backgrounds
- Add mod options panel setting for extra debugging logging and reduce default logging detail
- Add mod options panel button to regenerate building buttons
- When creating local settings from growables, set growable option by default and pre-populate with home/workplace counts from original prefab
- Adjust render lighting angle to reduce effects of themes with over-saturated light
- Override theme exposure and sky tint when rendering previews
- Use first submesh as render mesh when it has more tris than main mesh
- Wait until confirmation level is fully loaded before generating thumbnails
- Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
- Only force building household count updates when actual counts differ from specified
- Use EnableCitizenUnits reverse redirect to reallocate household counts where actual counts are lower than specified
- Add dynamic positioning of settings button in building info panels; aligns with Repaint color patch
- Store building buttons directly in BuildingData record
- Increse building selection list height
- Lower z-order of notification panels (to put them behind everything else)
- Update CitiesHarmony to 1.0.5


Version 2.0.3

- Ensure Dummy AI initialises with beautification service
- Catch NullReferenceException on building button tooltip creation if another mod is interfering with AI
- Increase InitPrefab patch priority


Version 2.0.2

- Delete building button when local settings are removed and no other settings remain
- Fix building button not being deleted when a UI category change is saved and then applied