@@ -1,4 +1,5 @@
 ﻿- Add mod compatibility check for old Painter mod
+- Streamlined notification messaging
 
 
 Version 2.1.1
